# mathjob

./: LICENCE.md  README.md  __init__.py  df.csv  esvier.py  examples.py  main.c  out  pytchart.py  rpyc.py  setup.cfg
