[metadata]
name = pytchart
version = 0.1
author = zachyboy12
description = A random-based chart maker that is very easy to use and is very customizable.
long_description = file: README.md
long_description_content_type = markdown
url = https://github.com/zachyboy12/pytchart
project_urls =
    Bug Tracker = https://github.com/zachyboy12/pytchart/issues
keywords = random, chart, graph
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = /pytchart
python_requires = <=3

[options.packages.find]
where = /pytchart
